--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,7 +1,8 @@
-@import 'redoutline';
+// @import 'redoutline';
 
+@import 'mixins';
 @import 'fonts';
 @import 'variables';
-@import 'mixins';
 @import 'navstyle';
 @import 'mainstyle';
+@import 'results';
