--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,181 @@
-* {
-  border: 1px red solid; }
-
 @font-face {
   font-family: normal;
-  src: url("fonts/Ubuntu-Light.ttf"); }
+  src: url("../fonts/Ubuntu-Light.ttf"); }
+.nav {
+  font-family: normal;
+  font-size: 2vh;
+  line-height: 2vh;
+  vertical-align: middle;
+  height: 2vh;
+  width: 90vw;
+  margin: 0.2vh auto;
+  text-align: right; }
+
 .main__title {
-  height: 5vh; }
+  font-family: normal;
+  font-size: 5vh;
+  line-height: 5vh;
+  vertical-align: middle;
+  height: 6vh;
+  margin: 0.2vh;
+  margin-bottom: 1vh; }
 
 .main {
   height: 95vh;
-  width: 100%;
-  display: inline-block;
+  width: 95vw;
+  display: block;
   position: relative;
   margin: 0 auto;
   text-align: center;
-  min-width: 320px; }
+  min-width: 50vh;
+  line-height: 0;
+  user-select: none; }
 
 .main__input {
+  height: 25vh;
   text-align: center;
-  display: inline-block;
+  display: block;
   position: relative;
-  margin: 0 auto;
-  max-height: 45vh; }
+  margin: 0.2vh; }
 
-.main__input__btnLetter, .main__input__btnLetter_used {
-  width: 5vmax;
-  height: 5vmax;
+.main__input__btnLetter {
+  font-family: normal;
+  font-size: 4vh;
+  line-height: 4vh;
+  vertical-align: middle;
+  height: 4vh;
+  width: 4vh;
   display: inline-block;
   position: relative;
-  margin: 0.5vmax; }
+  margin: 0.2vh;
+  margin-bottom: 1vh;
+  padding: 0.2vh;
+  border-radius: 0.4vh;
+  cursor: pointer;
+  background-color: #3a91d0;
+  color: white; }
+
+.main__input__btnLetter_ready:active {
+  transform: translateY(2px); }
 
 .main__input__btnLetter_used {
-  background-color: gray; }
+  background-color: gray;
+  color: lightgray; }
+
+.main__hint {
+  font-family: normal;
+  font-size: 2.5vh;
+  line-height: 2.5vh;
+  vertical-align: middle;
+  height: 3vh;
+  margin: 0.5vh 1vh;
+  position: relative;
+  display: inline-block; }
+
+.main__score {
+  font-family: normal;
+  font-size: 2.5vh;
+  line-height: 2.5vh;
+  vertical-align: middle;
+  position: relative;
+  display: inline-block;
+  margin: 0.5vh 1vh; }
+
+.main__lives {
+  font-family: normal;
+  font-size: 2.5vh;
+  line-height: 2.5vh;
+  vertical-align: middle;
+  position: relative;
+  display: inline-block;
+  margin: 0.5vh 1vh; }
 
 .main__drawingArea {
-  width: 70vw;
   height: 40vh;
-  display: inline-block; }
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  line-height: 4vh; }
 
 .main__word {
   overflow-x: auto;
+  overflow-y: hidden;
   white-space: nowrap;
-  word-wrap: normal; }
+  word-wrap: normal;
+  font-family: normal;
+  margin: 0.2vh; }
 
-.main__word_hidden, .main__word_space, .main__word_revealed {
-  width: 5vmax;
-  height: 5vmax;
+.main__word__tile {
+  font-family: normal;
+  font-size: 4vh;
+  line-height: 4vh;
+  vertical-align: middle;
+  height: 4vh;
+  width: 3.4vh;
   display: inline-block;
   position: relative;
-  vertical-align: middle;
-  background-color: darkblue;
-  margin: 0.5vmax; }
+  margin: 0.2vh;
+  background-color: #69bb7e; }
 
-.main__word_revealed {
+.main__word__tile_revealed {
   background-color: white;
   color: black; }
 
-.main__word_space {
-  background-color: red; }
+.main__word__tile_hidden {
+  background-color: #3a91d0; }
+
+.main__results {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  user-select: none;
+  background-color: white;
+  background-color: rgba(255, 255, 255, 0.7); }
+
+.main__results__stats {
+  font-family: normal;
+  font-size: 6vh;
+  line-height: 6vh;
+  vertical-align: middle;
+  text-align: center;
+  display: block;
+  position: relative;
+  top: 5vh;
+  left: 10vw;
+  width: 80vw;
+  height: 80vh;
+  z-index: 0;
+  background-color: #69bb7e;
+  background-color: rgba(105, 187, 126, 0.9);
+  color: white; }
+
+.main__results__stats_loss {
+  background-color: #f65a5a;
+  background-color: rgba(246, 90, 90, 0.9); }
+
+.main__results__btnOk {
+  font-family: normal;
+  font-size: 4vh;
+  line-height: 4vh;
+  vertical-align: middle;
+  display: block;
+  position: absolute;
+  top: 75vh;
+  right: 20vw;
+  text-align: center;
+  padding: 1vh 2vw;
+  border-radius: 1vh;
+  background-color: white;
+  color: #69bb7e;
+  cursor: pointer; }
+
+.main__results__btnOk_loss {
+  color: #f65a5a; }
+
+.main__results__btnOk:active {
+  transform: translateY(2px); }
 
 /*# sourceMappingURL=main.css.map */
