--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@
   line-height: 2.5vh;
   vertical-align: middle;
   position: relative;
+  height: 3vh;
   display: inline-block;
   margin: 0.5vh 1vh; }
 
@@ -87,6 +88,7 @@
   line-height: 2.5vh;
   vertical-align: middle;
   position: relative;
+  height: 3vh;
   display: inline-block;
   margin: 0.5vh 1vh; }
 
