--- a/stylesheets/_mainstyle.scss
+++ b/stylesheets/_mainstyle.scss
@@ -69,6 +69,7 @@
 .main__score {
   @include sizeVerticals(2.5vh);
   position: relative;
+  height: 3vh;
   display: inline-block;
   margin: 0.5vh 1vh;
 }
@@ -76,6 +77,7 @@
 .main__lives {
   @include sizeVerticals(2.5vh);
   position: relative;
+  height: 3vh;
   display: inline-block;
   margin: 0.5vh 1vh;
 }
